# drafft-ink

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.web  README.md  build.sh
.github/workflows/: ci.yml
crates/drafftink-app/: Cargo.toml
crates/drafftink-app/src/: app.rs  event_handler.rs  lib.rs  main.rs  shortcuts.rs  ui.rs  web.rs
crates/drafftink-core/: Cargo.toml
crates/drafftink-core/src/: camera.rs  canvas.rs  collaboration.rs  input.rs  lib.rs  selection.rs  snap.rs  sync.rs
crates/drafftink-core/src/crdt/: convert.rs  mod.rs  schema.rs
crates/drafftink-core/src/shapes/: arrow.rs  ellipse.rs  freehand.rs  group.rs  image.rs  line.rs  math.rs  mod.rs  rectangle.rs  text.rs
crates/drafftink-core/src/storage/: autosave.rs  file.rs  indexeddb.rs  memory.rs  mod.rs
crates/drafftink-core/src/tools/: mod.rs
crates/drafftink-core/src/widget/: handles.rs  manager.rs  mod.rs  state.rs
crates/drafftink-render/: Cargo.toml
crates/drafftink-render/assets/: GelPen-readme.txt
crates/drafftink-render/src/: lib.rs  renderer.rs  text_editor.rs  vello_impl.rs
crates/drafftink-server/: Cargo.toml
crates/drafftink-server/src/: main.rs
crates/drafftink-widgets/: Cargo.toml
crates/drafftink-widgets/src/: buttons.rs  colors.rs  layout.rs  lib.rs  menu.rs
web/: index.html
