[package]
name = "drafftink-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DrafftInk application shell for native and WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "drafftink"
path = "src/main.rs"

[features]
default = ["native"]
native = ["dep:pollster", "dep:env_logger", "dep:rfd", "dep:arboard"]

[dependencies]
drafftink-core = { path = "../drafftink-core" }
drafftink-render = { path = "../drafftink-render" }
drafftink-widgets = { path = "../drafftink-widgets" }

kurbo.workspace = true
peniko.workspace = true
winit.workspace = true
vello.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true

# UI
egui.workspace = true
egui-wgpu.workspace = true
egui_extras.workspace = true

# Native-only
pollster = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }

# PNG encoding (for both native and wasm)
png.workspace = true

# egui-winit needs different features for native vs WASM
# Also image decoding for drag-drop/paste (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { workspace = true, features = ["clipboard", "links", "x11", "wayland"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# No clipboard/native features for WASM
egui-winit = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Document",
    "Window",
    "Location",
    "Navigator",
    "Clipboard",
    "ClipboardItem",
    "Element",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "HtmlElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "CssStyleDeclaration",
    # For drag-drop and clipboard read
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
] }
js-sys.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
web-time = "1.1"

[dev-dependencies]
