[package]
name = "drafftink-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core data structures and logic for DrafftInk whiteboard"

[dependencies]
kurbo.workspace = true
peniko.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
loro = "1.10"
log = "0.4"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5"
tungstenite = "0.24"
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    "Window",
    "Storage",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomStringList",
    "Event",
    "EventTarget",
    # WebSocket support
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-time.workspace = true

[dev-dependencies]
tempfile = "3"
