[package]
name = "drafftink-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket relay server for DrafftInk collaboration"

[[bin]]
name = "drafftink-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
dashmap = "6"
bytes = "1"
